2007-10-25  Sven Schober <sschober@suse.de>
	* release version 0.24

	* configure.in: added 'tests/etc/Makefile' to AC_OUTPUT
	* tests/etc/Makefile.am: New. Introduced to avoid packaging
	'.svn' directory.
	* tests/testcases/test-ck_connector2.single: Pipe cmd output
	to /dev/null to achieve location independency (test case
	would fail on different machines/paths).

2007-10-15  Michael Calmer <mc@suse.de>
	* src/mod_pam_thinkfinger.c: Use dynamic confdir
	parameter.
	* src/pam-config.c: Use dynamic confdir parameter.
	* src/single_config.c: fix endless loop if a module exists
	twice in a config file [#328519]. Added some debug
	statements.
	* tests/testcases/test-ck_connector2.single: Test case for
	bug[#328519].

2007-08-30  Sven Schober <sschober@suse.de>
	* src/mod_pam_thinkfinger.c: check return value of asprintf.
	* tests/Makefile.am: Mention testcases/, support/, config/
	and pam-config.test/ in EXTRA_DIST.
	* src/pam-config.c: Issue warning in relink() if old common-*
	file is not found.
	* load_obsolete_conf.c: Issue warnings if 
	/etc/security/pam_{pwcheck,unix2}.conf files not found.

2007-08-28  Sven Schober <sschober@suse.de>
	* src/pam-config.c: Fix bug where common-{auth,...} links wouldn't be
	created if files of the same name didn't exist already.
	* tests/single.out/test-mount-thinkfinger.err: New.
	* tests/single.out/test-mount-thinkfinger.out: New.
	* tests/testcases/test-mount-thinkfinger.single: New
	testcase to check for pam_{mount,thinkfinger}.so mutex.

2007-08-23  Sven Schober <sschober@suse.de>
	* src/pam-config.c: CONFDIR customizable via cmd line
	option.
	* src/pam-config.c: Gather return values from write_config()
	invocations, and return failure in case a single one fails.
	* src/pam-config.h: -- " --
	* src/mod_pam_thinkfinger.c: Heed --confdir option. 
	* src/single_config.c: -- " --
	* src/mod_pam_mount.c: -- " -- 
	* tests/: New testsuite. See tests/README for usage.

2007-08-14  Sven Schober <sschober@suse.de>